apps/raffleize-frontend/dev/networking/routes/httproute-raffleize-frontend-dev-web.yaml
# HTTPRoute main route for HTTPS traffic to raffleize-frontend dev.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-raffleize-frontend-dev-web
  namespace: raffleize-frontend
spec:
  parentRefs:
    - name: dev-gateway-raffleize-frontend-dev-web
      namespace: raffleize-frontend
      sectionName: https
  hostnames:
    - dev-raffleize.cardano.vip
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dev-service-raffleize-frontend-web
          port: 80
